# mechanalyzer

./: .gitignore  .pylintrc  README.md  __init__.py  build.sh  environment.yml  fake-install.sh  fxns.py  lint.sh  meta.yaml  pyproject.toml  recipe.yaml  setup.py  xarray_demo_DataArray.py  xarray_demo_DataSet.py  xarray_wrappers.py  xarray_wrappers_test.py
.circleci/: config.yml
.recipe/: recipe.yaml
builder/: __init__.py
calculator/: __init__.py  combine.py  rates.py
docs/: conf.py  index.rst  run.py
fit/: __init__.py
mechanalyzer/: __init__.py  environment.yml  fake-install.sh  meta.yaml  par.py  setup.py
mechanalyzer_bin/: add_params.py  add_stereo.py  build.py  build2.py  build_mech.py  butane_build.out  check_mech.py  check_spc.py  clean_spc.py  combine_mechs.py  compare_fits.py  compare_rates.py  compare_thermo.py  expand_species.py  fix_combined_therm_names.py  generate_nasapoly.py  newspc.csv  plot_pes.py  plot_pes_ckin.py  plot_pes_mess.py  prompt.py  prompt2.py  prompt_multipes.py  pssa.py  rem_ste.py  rem_unstab_mech.py  remap_name.py  run_sort.py  ste_mech.py  ste_mech2.py
mobj/: inf.py  par.py  pes.py  rates.py  spc.py  thy.py
parser/: __init__.py  _ckin.py  _csv.py  pes.py  spc.py
plotter/: __init__.py
ratefit/: README.md  __init__.py  build.sh  dsarrfit.x  environment.yml  err.py  ktpdct.py  meta.yaml  run.py  setup.py
ratefit_bin/: fit_rates.py  label.inp  rate.out
tests/: out  test__parse_mech.py  test__parse_rxns.py  test__parse_spc.py  test__parse_therm.py  test__plot_pes.py  test__plot_rates.py  test__write_reaction.py  (+2 more)
(+508 files in other folders)
